--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -6,6 +6,9 @@
   - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
   - [456. 132模式](#456-132模式)
   - [补充. 求区间最小数乘区间和的最大值](#补充-求区间最小数乘区间和的最大值)
+  - [补充. 看到的楼盘数量 [腾讯笔试]](#补充-看到的楼盘数量-腾讯笔试)
+  - [周赛. 5196. 队列中可以看到的人数](#周赛-5196-队列中可以看到的人数)
+  - [5805. 最小未被占据椅子的编号](#5805-最小未被占据椅子的编号)
 - [进阶](#进阶)
   - [31. 下一个排列 [Medium]](#31-下一个排列-medium)
   - [496. 下一个更大元素 I](#496-下一个更大元素-i)
@@ -353,6 +356,116 @@ int main() {
 }
 ```
 
+### 补充. 看到的楼盘数量 [腾讯笔试]
+> 提供一行楼栋数和楼栋高度，求每栋楼最多可以看见楼栋数
+```
+6
+5 3 8 3 2 5
+输出
+3 3 5 4 4 4
+```
+- 通过单调栈，分别从左到右和从右到左搜索，找到左右可以看到的楼栋数量
+
+```c++
+stack<int> st1;
+stack<int> st2;
+
+vector<int> res(n, 1);
+for (int i = n - 1; i >= 0; i--) {
+    res[i] += st1.size();
+    while (!st1.empty() && heights[i] >= st1.top()) {
+        st1.pop();
+    }
+    st1.push(heights[i]);
+}
+for (int i = 0; i < n; i++) {
+    res[i] += st2.size();
+    while (!st2.empty() && heights[i] >= st2.top()) {
+        st2.pop();
+    }
+    st2.push(heights[i]);
+}
+```
+### 周赛. 5196. 队列中可以看到的人数
+> 有 n 个人排成一个队列，从左到右 编号为 0 到 n - 1 。给你以一个整数数组 heights ，每个整数 互不相同，heights[i] 表示第 i 个人的高度。
+>  看到 他右边另一个人的条件是**这两人之间的所有人都比他们两人矮**
+
+```
+输入：heights = [10,6,8,5,11,9]
+输出：[3,1,2,1,1,0]
+```
+- **单调栈，从右向左遍历**
+  - **维护递减栈**，对于当前位置的结果，**需要找出低于当前高度的栈内数量**
+    - 即每次寻找低于当前高度的递增序列的长度
+  - 并考虑临界的情况进行加一操作
+    - 即如果**st.top()比当前位置高**的话，当前位置也能看到右侧的最高位置。
+- 与腾讯笔试题目相比，边界条件更严格。
+```c++
+class Solution {
+public:
+    vector<int> canSeePersonsCount(vector<int>& heights) {
+        stack<int> st;
+        int n = heights.size();
+        vector<int> ans(n);
+        for (int i = n - 1; i >= 0; i--) {
+            while (!st.empty() && st.top() < heights[i]) {
+                ans[i]++;
+                st.pop();
+            }
+            ans[i] += !st.empty();
+            st.push(heights[i]);
+        }
+        return ans;
+    }
+};
+```
+
+
+### 5805. 最小未被占据椅子的编号 
+> 有 n 个朋友在举办一个派对，这些朋友从 0 到 n - 1 编号。**派对里有 无数 张椅子，编号为 0 到 infinity**。当一个朋友到达派对时，他会占据 编号最小 且未被占据的椅子。
+比方说，当一个朋友到达时，如果椅子 0 ，1 和 5 被占据了，那么他会占据 2 号椅子。
+当一个朋友离开派对时，他的椅子会立刻变成未占据状态。如果同一时刻有另一个朋友到达，可以立即占据这张椅子。
+
+
+- 分析：
+  - 椅子状态变化涉及两个关键要素： 某人到来， 使用未占用椅子； 某人离开， 释放椅子
+  - 需用设计数据结构实现对当前最小的未占用椅子的快速查询，**因此考虑优先队列**
+- 设计：
+  - 优先队列1： 存放未占用椅子列表，小顶堆。 
+    - 堆顶为编号最小的未占用椅子
+  - 优先队列2： 存放释放椅子列表： `<leave_time, chair_no>`
+  - **初始化n把椅子**
+  - 然后时间进行升序排列， 进行遍历
+    - 从**优先列表中弹出待释放椅子**，并添加至未占用椅子列表
+- 关键点： **`优先队列 + 哈希表`**
+
+
+```c++
+class Solution {
+public:
+    int smallestChair(vector<vector<int>>& times, int targetFriend) {
+        priority_queue<int, vector<int>, greater<int>> chairs;
+        priority_queue<pair<int, int>, vector<pair<int,int>>, greater<>> leaveChairs;
+        for (int i = 0; i < times.size(); i++) {
+            chairs.push(i); // 保持未被占领的椅子
+        }
+        int target = times[targetFriend][0];
+        sort(times.begin(), times.end());
+        for (int i = 0; i < times.size(); i++) {
+            while (!leaveChairs.empty() && leaveChairs.top().first <= times[i][0]) {
+                chairs.push(leaveChairs.top().second); // 将释放的椅子放入堆中
+                leaveChairs.pop();
+            }
+            leaveChairs.push({times[i][1], chairs.top()}); // 选择未释放的椅子
+            if (times[i][0] == target) {
+                return chairs.top();
+            }
+            chairs.pop();
+        }
+        return 0;
+    }   
+};
+```
 
 
 ## 进阶
