--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -2998,7 +2998,7 @@ public:
         }
         long factor = 1;
         unordered_map<long, int> seen;
-        seen[h] = 0;
+        seen[h] = 0; // 关键初始化
         for (int i = 1; i <= L; i++) factor = (factor * base) % modules;
 
         for (int start = 1; start < n - L + 1; start++) {
