--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -74,6 +74,7 @@
   - [617. 合并二叉树](#617-合并二叉树)
   - [958. 二叉树的完全性校验](#958-二叉树的完全性校验)
   - [129. 求根节点到叶子节点数字之和](#129-求根节点到叶子节点数字之和)
+  - [671. 二叉树中第二小的节点](#671-二叉树中第二小的节点)
 - [二叉树中的路径问题](#二叉树中的路径问题)
   - [257. 打印二叉树所有路径](#257-打印二叉树所有路径)
   - [112. 路径总和 [EASY]](#112-路径总和-easy)
@@ -2455,7 +2456,62 @@ public:
     }
 };
 ```
+### 671. 二叉树中第二小的节点
+> 一个非空特殊的二叉树，每个节点都是正数，并且每个节点的子节点数量只能为 2 或 0。如果一个节点有两个子节点的话，那么该节点的值等于两个子节点中较小的一个。
+> `root.val = min(root.left.val, root.right.val)` 总成立。
+> 找出树中第二小的节点值
 
+- 根据以上定义可知： 二叉树中最小值为root节点，通过深度搜索，每次找到比root节点的值即可
+  - 当搜索到比root节点大的值即刻返回
+  - 当左右都有比root节点值大时，取两侧最小值
+  - 其他情况取两侧最大值
+
+```c++
+class Solution {
+public:
+    int dfs(TreeNode* root, int val) {
+        if (!root) return -1;
+        if (root -> val > val) return root -> val;
+        int l = dfs(root -> left, val);
+        int r = dfs(root -> right, val);
+        if (l > 0 && r > 0) return min(l, r);
+        return max(l,r);
+    }
+    int findSecondMinimumValue(TreeNode* root) {
+        if (!root) return -1;
+        return dfs(root, root -> val);
+    }
+};
+```
+```c++
+class Solution {
+public:
+    int dfs(TreeNode* root, int val) {
+        if (root -> left == nullptr) return root -> val;
+        if ( root -> val == val && root -> left != nullptr) {
+            int a = dfs(root -> left, val);
+            int b = dfs(root -> right, val);
+            if (a == val) return b;
+            if (b == val) return a;
+            return min(a, b);
+        }
+        else {
+            return root -> val;
+        }
+    }
+    int findSecondMinimumValue(TreeNode* root) {
+        if (!root || !root -> left) return -1;
+        cout << "test";
+        int cur = root -> val;
+        int a = dfs(root -> left, cur);
+        int b = dfs(root -> right, cur);
+        if (a == cur && b == cur) return -1; 
+        if (a == cur) return b;
+        if (b == cur) return a;
+        return min(a , b );
+    }
+};
+```
 ## 二叉树中的路径问题
 
 
