--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -83,6 +83,7 @@
   - [124. 二叉树中的最大路径和 [Hard]](#124-二叉树中的最大路径和-hard)
   - [543. 二叉树的直径](#543-二叉树的直径)
   - [687. 最长同值路径](#687-最长同值路径)
+  - [863. 二叉树中所有距离为 K 的结点](#863-二叉树中所有距离为-k-的结点)
   - [208. 实现Trie前缀树](#208-实现trie前缀树)
 - [面试](#面试)
 
@@ -2820,6 +2821,67 @@ public:
     }
 };
 ```
+### 863. 二叉树中所有距离为 K 的结点
+> 给定一个二叉树（具有根结点 root）， 一个目标结点 target ，和一个整数值 K 。**返回到目标结点 target 距离为 K 的所有结点的值的列表。** 
+- 本质上是图搜索问题， 给定起点找到距离起点K的节点
+- 鉴于二叉树的特殊结构，无法方便地进行向上搜索。
+- 因此第一步就是要建立其子节点与父节点的连接：
+  - 即记录下当前节点的父节点信息，使用哈希表来完成
+- 在此哈希表的基础上进行dfs或者bfs即可，递归向上/向下走k步即可
+  - 需要避免重复遍历的问题，通过记录pre节点(last)来避免
+
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode(int x) : val(x), left(NULL), right(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    unordered_map<int, TreeNode*> parents;// 哈希表存储父节点
+    vector<int> ans;
+    void dfs(TreeNode* root) {
+        if (!root) return;
+        if (root -> left) {
+            parents[root -> left -> val] = root;
+            dfs(root -> left);
+        }
+        if (root -> right) {
+            parents[root -> right -> val] = root;
+            dfs(root -> right);
+        }
+    }
+    
+    void search(TreeNode* root,  TreeNode* last, int k, int depth) {
+        // 用last节点来记录上一个节点
+        // 避免重复值访问
+        if (!root) return;
+        if (depth == k) {
+            ans.push_back(root -> val);
+        }
+        if (root -> left != last) {
+            search(root -> left, root, k, depth + 1);
+        }
+        if (root -> right != last) {
+            search(root -> right, root, k, depth + 1);
+        }
+        // 向上遍历
+        if (parents[root -> val] != last) {
+            search(parents[root -> val], root, k, depth + 1);
+        }
+    }
+    vector<int> distanceK(TreeNode* root, TreeNode* target, int k) {
+        dfs(root);
+        search(target, nullptr, k, 0);
+        return ans;
+    }
+};
+```
+
 
 ### 208. 实现Trie前缀树
 >  前缀树 是一种树形数据结构，用于**高效地存储和检索字符串数据集中的键**
