--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -30,11 +30,14 @@
   - [416. 分割等和子集](#416-分割等和子集)
   - [1049. 最后一块石头的重量II](#1049-最后一块石头的重量ii)
   - [494. 目标和 target sum [Medium]](#494-目标和-target-sum-medium)
-- [Others](#others)
+- [匹配问题](#匹配问题)
   - [10. 正则表达式 [Hard *]](#10-正则表达式-hard-)
   - [44. 通配符匹配 [Hard]](#44-通配符匹配-hard)
+- [跳跃游戏](#跳跃游戏)
   - [55. 跳跃游戏 [Medium]](#55-跳跃游戏-medium)
   - [45. 跳跃游戏 II  [贪心]](#45-跳跃游戏-ii--贪心)
+  - [1306. 跳跃游戏 III](#1306-跳跃游戏-iii)
+- [Others](#others)
   - [62. 不同路径 [Medium]](#62-不同路径-medium)
   - [63. 不同路径 2](#63-不同路径-2)
   - [980. 不同路径 3 [Hard]](#980-不同路径-3-hard)
@@ -1272,9 +1275,7 @@ public:
     }
 };
 ```
-
-
-## Others
+## 匹配问题
 
 ### 10. 正则表达式 [Hard *]
 > 给你一个**字符串 s 和一个字符规律 p**，请你来实现一个支持 '.' 和 '*' 的正则表达式匹配。
@@ -1384,6 +1385,8 @@ public:
     }
 };
 ```
+
+## 跳跃游戏
 ### 55. 跳跃游戏 [Medium]
 - **判断是否可达**
   - 可以通过**贪心的思路**进行处理
@@ -1460,6 +1463,76 @@ public:
 };
 ```
 
+### 1306. 跳跃游戏 III
+> 有一个非负整数数组 arr，你最开始位于该数组的起始下标 start 处。当你位于下标 i 处时，你可以跳到 i + arr[i] 或者 i - arr[i]。
+请你判断自己是否能够跳到**对应元素值为 0 的 任一 下标处**。
+不管是什么情况下，你都无法跳到数组之外
+
+```
+输入：arr = [4,2,3,0,3,1,2], start = 5
+输出：true
+解释：
+到达值为 0 的下标 3 有以下可能方案： 
+下标 5 -> 下标 4 -> 下标 1 -> 下标 3 
+下标 5 -> 下标 6 -> 下标 4 -> 下标 1 -> 下标 3 
+```
+- 基于深搜或者广搜即可完成:
+  - dfs 基于栈/递归实现
+  - bfs 基于队列实现
+  - 注意判断位置是否可达, 并避免重复访问即可
+- 时间复杂度 O(N) 
+- 空间复杂度 O(N)
+```c++
+class Solution {
+public:
+    bool bfs(vector<int>& arr, int index) {
+        queue<int> q;
+        q.push(index);
+        unordered_set<int> visited;
+        visited.insert(index);
+        while (!q.empty()) {
+            int sz = q.size();
+            for (int i = 0; i < sz; i++) {
+                int cur = q.front();
+                q.pop();
+                if (arr[cur] == 0) return true;
+                if (cur - arr[cur] >= 0 && visited.find(cur - arr[cur]) == visited.end()) {
+                    q.push(cur - arr[cur]);
+                    visited.insert(cur - arr[cur]);
+                }
+                if (cur + arr[cur] < arr.size() && visited.find(cur + arr[cur]) == visited.end()) {
+                    q.push(cur + arr[cur]);
+                    visited.insert(cur + arr[cur]);
+                }
+            }
+        }
+        return false;
+    }
+    bool helper(vector<int>& arr, vector<int>& visited, int index) {
+        
+        if (arr[index] == 0) return true;
+        if (arr[index] + index < arr.size() && !visited[arr[index] + index]) {
+            visited[arr[index] + index] = 1;
+            if (helper(arr, visited, arr[index] + index)) return true;
+            visited[arr[index] + index] = 0;
+        }
+        if (index - arr[index] >= 0 && !visited[index - arr[index]]) {
+            visited[index - arr[index]] = 1;
+            if (helper(arr, visited, index - arr[index])) return true;
+            visited[index - arr[index]] = 0;
+        }
+        return false;
+    }
+    bool canReach(vector<int>& arr, int start) {
+        if (arr.size() < start) return false;
+        // vector<int> visited(arr.size());
+        // visited[start] = 1;
+        //return helper(arr, visited, start);
+        return bfs(arr, start);
+    }
+};
+```
+## Others
 ### 62. 不同路径 [Medium]
 - 经典的dp任务： **给出矩形，计算到达右下角的路径数量**
   - $O(MN)$
@@ -1602,9 +1675,7 @@ public:
     int change(int amount, vector<int>& coins) {
         // dp[k][i] : k种硬币构成金额i的组合数量
         vector<int> dp(amount + 1);
-        for (int k = 0; k < coins.size() + 1; k++) {
-            dp[0] = 1;
-        }
+        dp[0] = 1;
         for (int k = 1; k <= coins.size(); k++) {
             for (int i = 1; i <= amount; i++) {
                 if (i < coins[k - 1]) {
