--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -969,7 +969,7 @@ public:
     }
 };
 ```
-- 进一步优化空间，实现常量级空间：使用矩阵第一行和第一列来标记是否有0， 进行两次矩阵遍历得到结果；
+- 进一步优化空间，实现常量级空间：**使用矩阵第一行和第一列来标记是否有0， 进行两次矩阵遍历得到结果**；
 - 最后再更新第一行和第一列。
 ```c++
 class Solution {
@@ -1027,6 +1027,10 @@ public:
   - 逐位进行计算; 以2304为例， cur = 0 high = 23 low = 4 digit = 10
   - 当前位cur == 0时， 出现1的次数为 high * digit 
   - cur == 1 时 , high * digit + low + 1
+    - 此位 1  的出现次数**由高位 high  和低位 low  决定**
+    - 2314 对于十位上的1： 0010 ~2314：
+      - 高位取值范围为： 000 ~ 230
+      - 23 * 10 + 4 (低位上的4) + 1 (起始的10) 
   - cur > 2 时， (high + 1) * digit 
   - 终止条件： high == 0 && cur == 0
 
