--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -41,6 +41,7 @@
   - [350. 两个数组的交集II](#350-两个数组的交集ii)
   - [977. 有序数组的平方](#977-有序数组的平方)
   - [611. 有效三角形的个数](#611-有效三角形的个数)
+  - [581. 最短无序连续子序列](#581-最短无序连续子序列)
   - [1877. 数组中最大数对和的最小值](#1877-数组中最大数对和的最小值)
 - [哈希表技巧](#哈希表技巧)
   - [1. 两数之和](#1-两数之和)
@@ -1753,6 +1754,75 @@ public:
     }
 };
 ```
+
+
+### 581. 最短无序连续子序列
+> 给你一个整数数组 nums ，你需要找出一个 连续子数组 ，如果对这个子数组进行升序排序，那么整个数组都会变为升序排序。
+请你找出符合题意的 最短 子数组，并输出它的长度。
+
+```
+输入：nums = [2,6,4,8,10,9,15]
+输出：5
+解释：你只需要对 [6, 4, 8, 10, 9] 进行升序排序，那么整个表都会变为升序排序。
+```
+- 基础做法: 复制原数据进行排序处理, 对比排序后的数组原数组的差异位置, 两个差异位置即为无序段
+  - 时间复杂度 O(nlogn) 空间复杂度 O(n)
+- 关键技巧: **`双指针 + 排序`**
+```c++
+class Solution {
+public:
+    int findUnsortedSubarray(vector<int>& nums) {
+        vector<int> tmp(nums.begin(), nums.end());
+        sort(nums.begin(), nums.end());
+        int l = 0;
+        int r = nums.size() - 1;
+        while (l <= r && nums[l] == tmp[l]) {
+            l++;
+        }
+        while (l <= r && nums[r] == tmp[r]) {
+            r--;
+        }
+        return r - l + 1;
+    }
+};
+```
+- 进阶: 如何设计时间复杂度为O(N)的算法
+    - 尝试分别寻找目标区间的左右边界, 通过遍历从左向右搜索右边界, 即找到值小于左侧最大值的位置
+    - 从右向左搜索左边界, 即找到值大于右侧最小值的位置
+    - 即无序子数组中最小元素的正确位置可以决定左边界，最大元素的正确位置可以决定右边界
+  - 注意临界条件: 对于有序数组应该返回0, 通过设置`left/right = -1`初始值来判断.
+- 时间复杂度 O(N)
+
+```c++
+class Solution {
+public:
+    int findUnsortedSubarray(vector<int>& nums) {
+        int n = nums.size();
+        int maxn = INT_MIN;
+        int minn = INT_MAX;
+        int right = -1;
+        int left = -1;
+        for (int i = 0; i < n; i++) {
+            if (maxn > nums[i]) {
+                right = i;
+            }
+            else {
+                maxn = nums[i];
+            }
+        }
+        for (int i = n - 1; i >= 0; i--) {
+            if (minn < nums[i]) {
+                  left = i;              
+            }
+            else {
+                minn = nums[i];
+            }
+        }
+        return right == -1 ? 0 : right - left + 1;
+    }
+};
+```
+
 ### 1877. 数组中最大数对和的最小值
 > 一个数对 (a,b) 的 数对和 等于 a + b 。最大数对和 是一个数对数组中最大的 数对和 
 给你一个长度为 偶数 n 的数组 nums ，请你将 nums 中的元素分成 n / 2 个数对，使得：
