--- a/topics/T2-字符串匹配问题.md
+++ b/topics/T2-字符串匹配问题.md
@@ -8,6 +8,9 @@
     - [459. 重复的子字符串](#459-重复的子字符串)
     - [796. 旋转字符串](#796-旋转字符串)
     - [97. 交错字符串](#97-交错字符串)
+  - [正则表达式进行匹配](#正则表达式进行匹配)
+    - [10. 正则表达式 [Hard *]](#10-正则表达式-hard-)
+    - [44. 通配符匹配 [Hard]](#44-通配符匹配-hard)
 
 
 # 字符串匹配问题
@@ -416,6 +419,119 @@ public:
         return dp[m];
 
 
+    }
+};
+```
+
+## 正则表达式进行匹配
+
+
+
+### 10. 正则表达式 [Hard *]
+> 给你一个**字符串 s 和一个字符规律 p**，请你来实现一个支持 '.' 和 '*' 的正则表达式匹配。
+'.' 匹配任意单个字符
+'*' 匹配零个或多个前面的那一个元素
+所谓匹配，是要涵盖 整个 字符串 s的，而不是部分字符串。
+
+
+```
+输入：s = "aa" p = "a*"
+输出：true
+解释：因为 '*' 代表可以匹配零个或多个前面的那一个元素, 在这里前面的元素就是 'a'。因此，字符串 "aa" 可被视为 'a' 重复了一次
+```
+
+- 注意`*`的作用： 匹配前一个元素n次 （`n>=0`）
+- 那么根据这个特点，可以分为三种匹配情况：对于当前位置为`*`:
+  - 通配符匹配s串**一个字符** `dp[i][j-1]`
+  - 匹配s串**0个字符** `dp[i][j-2]` 当p串的前一个字符和当前s串的字符不匹配时，需要把前一个字符给忽略掉，即匹配0次
+  - 匹配s串**多个字符**  `dp[i-1][j]`
+```c++
+class Solution {
+public:
+    bool isMatch(string s, string p) {
+        s = " " + s;  // 有效避免空字符串的对比问题
+        p = " " + p; // 防止 c* 或者 /n 的情况
+        int m = s.size();
+        int n = p.size();
+        vector<vector<int>> dp(m + 1, vector<int>(n + 1));
+        dp[0][0] = 1;
+        for (int i = 1; i <= m; i++) {
+            for (int j = 1; j <= n; j++) {
+                // 注意索引-1的情况 dp和实际string的索引有差
+                // 单个字符匹配
+                if (s[i - 1] == p[j - 1] || p[j - 1] == '.') {
+                    dp[i][j] = dp[i - 1][j - 1];
+                }
+                else if (p[j - 1] == '*') {
+                    // 考察p串前一个字符  无法匹配的情况下，*匹配0次
+                    if (p[j - 2] != s[i - 1] && p[j - 2] != '.') {
+                        dp[i][j] = dp[i][j - 2];
+                    }
+                    // 多次匹配
+                    else { // p[j-2] == s[i-1] or p[j-2] == '.' 
+                        // dp[i][j-2] : 无法匹配
+                        // dp[i][j-1] : 匹配1个
+                        // dp[i-1][j] : 匹配多个a （s串）
+                        dp[i][j] = dp[i][j - 2] || dp[i - 1][j] || dp[i][j - 1]; 
+                    }
+                }
+            }
+        }
+        return dp[m][n];
+    }
+};
+```
+
+
+### 44. 通配符匹配 [Hard] 
+> 给定一个字符串 (s) 和一个字符模式 (p) ，实现一个支持 '?' 和 '*' 的通配符匹配。
+'?' 可以匹配任何单个字符。
+'*' 可以**匹配任意字符串（包括空字符串）**。
+两个字符串完全匹配才算匹配成功。
+
+```
+输入:
+s = "aa"
+p = "*"
+输出: true
+解释: '*' 可以匹配任意字符串。
+```
+- 与[LC10.正则表达式]一题相似，但在具体的匹配规则上有差异：
+    - 本题，使用`*`可以匹配任意字符串，匹配范围更广：
+- `dp[i][j]` 表示s串的前i个字符和p串前j个字符匹配：
+  - `s[i-1] == p[j-1] | p[j-1] == '?` 当前位置上字符匹配：
+    - `dp[i][j] = dp[i-1][j-1]`
+  - 如果当前位置上字符串不直接匹配的话，需要考虑`*`的功效：
+    - `dp[i][j] = dp[i-1][j] | dp[i][j-1]` 若 `p[j-1] == '*'`
+      - 即使用当前*进行匹配(`dp[i-1][j]`)与不使用`*`匹配(匹配空字符串 `dp[i][j-1]`)
+
+```c++
+class Solution {
+public:
+    bool isMatch(string s, string p) {
+        int  n = s.size();
+        int  m = p.size();
+        vector<vector<int>> dp(n + 1, vector<int> (m + 1));
+        // init 初始化设置
+        dp[0][0] = 1;
+        for (int i = 1; i <= m; i++) {
+            if (p[i-1] == '*') {
+                dp[0][i] = dp[0][i-1];
+            }
+        }
+        for (int i = 1; i <= n; i++) {
+            for (int j = 1; j <= m; j++) {
+                if (s[i-1] == p[j-1] || p[j-1] == '?') {
+                    dp[i][j] = dp[i-1][j-1];
+                }
+                else if (p[j-1] == '*') {
+                     
+                    dp[i][j] = dp[i-1][j] || dp[i][j-1] || dp[i-1][j-1];
+                }
+            }
+        }
+         
+        return dp[n][m];
     }
 };
 ```
