--- a/leetcode/数组/初级链表.md
+++ b/leetcode/数组/初级链表.md
@@ -37,6 +37,7 @@
   - [148. 排序链表](#148-排序链表)
   - [146. LRU cache结构设计 [Medium]](#146-lru-cache结构设计-medium)
   - [460. LFU cache结构设计 hard](#460-lfu-cache结构设计-hard)
+  - [1171. 从链表中删去总和值为零的连续节点](#1171-从链表中删去总和值为零的连续节点)
   - [补充题： 排序奇升偶降链表 [字节 *]](#补充题-排序奇升偶降链表-字节-)
   - [小结](#小结)
 
@@ -1712,7 +1713,60 @@ public:
  * obj->put(key,value);
  */
 ```
+### 1171. 从链表中删去总和值为零的连续节点
+> 给你一个链表的头节点 head，请你编写代码，反复删去链表中由 总和 值为 0 的连续节点组成的序列，直到不存在这样的序列为止。
+删除完毕后，请你返回最终结果链表的头节点。
 
+```
+输入：head = [1,2,-3,3,1]
+输出：[3,1]
+提示：答案 [1,2,1] 也是正确的。
+```
+- 本题需要计算连续节点的总和, 肯定能想到使用前缀和来求解
+- 考虑到链表的特殊性, 这里需要用前缀和配合哈希表来记录节点对应前缀和
+- 为了跳过0节点, 需要通过两次遍历链表来解决:
+  - 首先遍历一遍, 计算前缀和
+  - 第二次遍历, 进行相同前缀和节点的链接, 两个节点前缀和相同即**说明中间的左开右闭区间总和为0**
+- 使用dummy_node来简化代码
+- 关键技巧: **`哈希表 + 前缀和`**
+
+```c++
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode() : val(0), next(nullptr) {}
+ *     ListNode(int x) : val(x), next(nullptr) {}
+ *     ListNode(int x, ListNode *next) : val(x), next(next) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode* removeZeroSumSublists(ListNode* head) {
+        if (!head) return nullptr;
+        ListNode* phead = new ListNode();
+        unordered_map<int, ListNode*> preSum;
+        preSum[0] = phead;
+        phead -> next = head;
+        ListNode* p = head;
+        int curSum = 0;
+        while (p) {
+            curSum += p -> val;
+            preSum[curSum] = p;
+            p = p -> next;
+        }
+        p = phead;
+        curSum = 0;
+        while (p) {
+            curSum += p -> val;
+            p -> next = preSum[curSum] -> next;
+            p = p -> next;
+        }
+        return phead -> next;
+    }
+};
+```
 ### 补充题： 排序奇升偶降链表 [字节 *]
 - https://mp.weixin.qq.com/s/377FfqvpY8NwMInhpoDgsw
 - 链表，奇数位置按序增长，偶数位置按序递减，如何能实现链表从小到大
