--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -70,7 +70,7 @@
 - 排除特殊情况： **当为负数或者个位数为0时**，即不可能是回文数
 - 采用整数反转： 反转一半整数，然后对比得到的结果是否相等(偶数位) 或者 `x = tmp/10` （奇数位）
 
-```
+```c++
 class Solution {
 public:
     bool isPalindrome(int x) {
@@ -1729,7 +1729,7 @@ public:
 
 - 时间复杂度 O(N^2) 空间复杂度 O(logN)
 - 关键点 **`排序 + 逆序遍历 + 双指针 + 解空间确定`**
-
+- 关键店
 ```c++
 class Solution {
 public:
@@ -1743,6 +1743,7 @@ public:
             while (l < r) {
                 if (nums[l] + nums[r] > nums[i]) {
                     cnt += (r - l); // 说明该边与后面的所有边都能构成三角形
+                    // 灵魂
                     r--;
                 }
                 else {
