--- a/topics/T0-括号问题.md
+++ b/topics/T0-括号问题.md
@@ -5,6 +5,7 @@
   - [22. 括号生成 [Medium]](#22-括号生成-medium)
   - [32. 最长有效括号](#32-最长有效括号)
   - [678. 有效的括号字符串](#678-有效的括号字符串)
+  - [5840. 使字符串平衡的最小交换次数](#5840-使字符串平衡的最小交换次数)
 
 ## 括号问题
 - 在括号左右约束的特性下，灵活考察对dp/栈等数据结构的应用
@@ -223,6 +224,46 @@ public:
             if (left < 0 || right < 0) return false;
         }
         return true;
+    }
+};
+```
+
+### 5840. 使字符串平衡的最小交换次数
+>- 给你一个字符串 s ，下标从 0 开始 ，且长度为偶数 n 。字符串 恰好 由 n / 2 个开括号 '[' 和 n / 2 个闭括号 ']' 组成。
+>- 只有能满足下述所有条件的字符串才能称为 平衡字符串 ：
+>  - 字符串是一个空字符串，或者
+>  - 字符串可以记作 AB ，其中 A 和 B 都是 平衡字符串 ，或者
+>  - 字符串可以写成 [C] ，其中 C 是一个 平衡字符串 。
+
+- 解题思路：
+  - 首先通过计算左右括号的差值，来判断是否需要进行交换
+  - 当Left-right >= 0 时不需要进行交换
+  - `diff<0`时进行交换，每次从右侧开始找左括号用于和当前的右括号进行交换：
+    - 交换完成后调整diff
+    - 注意每次应该找到右侧的第一个左括号。
+- 时间复杂度O(N)
+```c++
+class Solution {
+public:
+    int minSwaps(string s) {
+        int n = s.size();
+        int diff = 0;
+        int cnt = 0;
+        for (int i = 0, j = n - 1; i < n; i++) {
+            if (s[i] == '[') {
+                diff++;
+            }
+            else {
+                diff--;
+            }
+            if (diff < 0) {
+                while (s[j] == ']') j--; // 找到右侧第一个左括号
+                swap(s[i], s[j]);
+                diff = 1;// 复原
+                cnt++;
+            }
+        }
+        return cnt;
     }
 };
 ```
