--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -45,6 +45,7 @@
   - [518. 零钱兑换 II](#518-零钱兑换-ii)
   - [300. 最长上升子序列 (LIS)](#300-最长上升子序列-lis)
   - [673. 最长递增子序列的个数](#673-最长递增子序列的个数)
+  - [5841. 找出到每个位置为止最长的有效障碍赛跑路线](#5841-找出到每个位置为止最长的有效障碍赛跑路线)
   - [354. 俄罗斯套娃信封](#354-俄罗斯套娃信封)
   - [221. 最大正方形](#221-最大正方形)
   - [72. 编辑距离 *[Hard]*](#72-编辑距离-hard)
@@ -1723,7 +1724,8 @@ public:
 
 - **贪心+二分搜索**
   - 要使上升子序列尽可能的长，则我们需要让序列上升得尽可能慢，因此我们希望每次在上升子序列最后加上的那个数尽可能的小。
-  - 基于上面的贪心思路，维护一个数组 d[i]，表示长度为 ii 的最长上升子序列的末尾元素的最小值，用 \textit{len}len 记录目前最长上升子序列的长度，起始时 lenlen 为 11，d[1] = \textit{nums}[0]d[1]=nums[0]
+    - tails[k]的值表示 **长度为 k + 1 的子序列尾部元素的值**
+  - 基于上面的贪心思路，维护一个数组 d[i]，表示长度为 ii 的最长上升子序列的末尾元素的最小值，用len 记录目前最长上升子序列的长度，起始时 lenlen 为 11，d[1] = \textit{nums}[0]d[1]=nums[0]
 
 
 ```c++
@@ -1773,6 +1775,7 @@ public:
         int ans = 1;
         for (int i = 0; i < n; i ++) {
             for (int j = 0; j < i; j++) {
+                // 实际在对比i j dp中的情况 看max在哪个地方取到
                 if (nums[j] < nums[i]) {
                     if (dp[i] < dp[j] + 1) {
                         dp[i] = dp[j] + 1;
@@ -1792,6 +1795,50 @@ public:
             }
         }
         return res;
+    }
+};
+```
+
+### 5841. 找出到每个位置为止最长的有效障碍赛跑路线
+```
+输入：obstacles = [2,2,1]
+输出：[1,2,1]
+解释：每个位置的最长有效障碍路线是：
+- i = 0: [2], [2] 长度为 1
+- i = 1: [2,2], [2,2] 长度为 2
+- i = 2: [2,2,1], [1] 长度为 1
+```
+
+- 等价于找出给定数组，**每个前缀数组的最长递增子序列的长度**。
+- 总体的框架与LC300LIS相同，但是基本的动态规划做法直接超时，要使用基于贪心思想+二分搜索的方法来完成：
+  - 使用tail数组记录每个前缀的最大值，即尾部值， 从而构成有序递增数组
+  - 当数组值大于/等于tail数组时 直接将数组值添加至tail
+    - 那么当前位置上的最长递增子序列为 `tail.size()`
+  - 当数组值小于tail数组时， 则需要从tail数组中利用二分搜索法搜索出最后一个小于该值的元素位置
+    - 实际计算时采用二分法搜索上阶的方法来实现 upper_bound
+  - 并将当前值更新到对应位置上， 那么当前位置上的最长递增子序列即为`idx+1`;
+- 时间复杂度 O(N*logN)
+- 关键点： **`问题任务转换`**
+```c++
+class Solution {
+public:
+    vector<int> longestObstacleCourseAtEachPosition(vector<int>& obstacles) {
+        int n = obstacles.size();
+        vector<int> tail(1);
+        vector<int> ans(n,1);
+        tail[0] = obstacles[0];
+        for (int i = 1; i < n; i++) {
+            if (tail.back() <= obstacles[i]) {
+                tail.push_back(obstacles[i]);
+                ans[i] = tail.size();
+            }
+            else {
+                int idx = upper_bound(tail.begin(), tail.end(), obstacles[i]) - tail.begin();
+                ans[i] = idx + 1;
+                tail[idx] = obstacles[i];
+            }
+        }
+        return ans;
     }
 };
 ```
