--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -1262,6 +1262,7 @@ public:
 - 时间复杂度 O(N)
 
 ```c++
+#include<limits.h>
 class Solution {
 public:
     string minWindow(string s, string t) {
@@ -1527,7 +1528,7 @@ public:
   - **当我们遇到新的数时，将新的数和双项队列的末尾（也就是window.back()）比较，如果末尾比新数小，则把末尾扔掉，直到该队列的末尾比新数大或者队列为空的时候才停止**，做法有点像使用栈进行括号匹配。
   - 双项队列中的所有值都要在窗口范围内
 - 关键逻辑： **元素入队操作和队列合法判断**  **双向队列 deque**
-- 时间复杂度 O(N) 空间复杂度O(k)
+- **时间复杂度 O(N) 空间复杂度O(k)**
 - 关键点： **`单调队列思想`** **`双向队列利用`**
 ```c++
 class Solution {
