--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -27,6 +27,7 @@
   - [134. 加油站](#134-加油站)
   - [135. 分发糖果 **](#135-分发糖果-)
 - [滑动窗口解题技巧](#滑动窗口解题技巧)
+  - [30. 串联所有单词的子串](#30-串联所有单词的子串)
   - [剑指57-II. 和为s的连续正数序列](#剑指57-ii-和为s的连续正数序列)
   - [76. 最小覆盖子串 [Hard] * [字节/百度]](#76-最小覆盖子串-hard--字节百度)
   - [727. 最小窗口子序列 [最小覆盖子序列]](#727-最小窗口子序列-最小覆盖子序列)
@@ -1196,6 +1197,132 @@ public:
 ```
 
 ## 滑动窗口解题技巧
+
+### 30. 串联所有单词的子串
+> 给定一个字符串 s 和一些 长度相同 的单词 words 。找出 s 中恰好可以由 words 中所有单词串联形成的子串的起始位置。
+注意子串要与 words 中的单词完全匹配，中间不能有其他字符 ，但不需要考虑 words 中单词串联的顺序。
+
+
+```
+输入：s = "barfoothefoobarman", words = ["foo","bar"]
+输出：[0,9]
+解释：
+从索引 0 和 9 开始的子串分别是 "barfoo" 和 "foobar" 。
+输出的顺序不重要, [9,0] 也是有效答案。
+```
+
+- 解题思路： 从每个位置开始搜索， 适用哈希表进行存储当前搜索下的结果：
+  - dw: 存储给定的单词的哈希 注意： 由于存在重复单词， 要用unordered_map来存储， 保存对应出现的频次
+  - win: 记录当前搜索窗口内的哈希信息；
+    - 当win与dw完全匹配时，则记录下当前窗口的起始位置；
+    - 然后从一个位置继续遍历搜索
+- 这种基础做法： 时间复杂度在 O(N^2) M : 单词数量 * L 单词长度
+
+```c++
+class Solution {
+public:
+    vector<int> findSubstring(string s, vector<string>& words) {
+        unordered_map<string, int> dw;
+        for (auto & p : words) {
+            dw[p]++;
+        }
+        int _len = words[0].size();
+        int i = 0;
+        int n = s.size();
+        int total = _len * words.size();
+        vector<int> ans;
+        // 单词存在重复
+        while (i <= n - total) {
+            //cout << "i:" << i << endl;
+            string tmp = s.substr(i, _len);
+            int j = 1;
+            int index = i;
+            int valid = 0;
+            unordered_map<string, int> win;
+            while (dw.find(tmp) != dw.end()) {
+                win[tmp]++;
+                
+                if (win[tmp] == dw[tmp]) {
+                    valid++;
+                    if (valid == dw.size()) {
+                        ans.push_back(i);
+                        break;
+                    }
+                }
+                if (win[tmp] > dw[tmp]) {
+                    break;
+                }
+                index = i + _len * j;
+                j++;
+                tmp = s.substr(index , _len);
+            }
+            //cout << tmp << valid << endl;
+            
+            i++;
+        }
+        return ans;
+
+    }
+};
+```
+- 本题关键还是在于滑动窗口
+  - 上面的方法本质还是暴力算法， 没有利用滑动窗口的特性
+- 重新设计滑动窗口算法：
+  - left / right； 记录匹配成功的次数， 当某个单词的匹配次数大于目标频次时，进行窗口左侧移动；
+    - 每次移动按照单词长度进行移动，从而显著提升效率
+    - 当匹配次数等于单词数量时， 即完成了滑窗匹配，进行left保存
+  - 由于单词的长度是相等的， 那么起始窗口的位置应该在[0,word_len] 范围之内
+- 经过以上优化： 时间复杂度为： O(N * L) L为单词的长度
+
+
+```c++
+class Solution {
+public:
+    vector<int> findSubstring(string s, vector<string>& words) {
+        unordered_map<string, int> dw;
+        for (auto & p : words) {
+            dw[p]++;
+        }
+        int _len = words[0].size();
+        int i = 0;
+        int n = s.size();
+        int total = _len * words.size();
+        vector<int> ans;
+        // 单词存在重复
+        for (int i = 0; i < _len; i++) {
+            int left = i;
+            int right = i;
+            int cnt = 0;
+            unordered_map<string, int> win;
+            while (right + _len <= n) {
+                string tmp = s.substr(right, _len);
+                right += _len;
+                if (dw.find(tmp) != dw.end()) {
+                    win[tmp]++;
+                    cnt++;
+                    // 调整窗口内的计数；
+                    // 当出现次数大于对应dw中的频次时即进行左侧删除操作
+                    while (win[tmp] > dw[tmp]) {
+                        string ts = s.substr(left, _len);
+                        cnt--;
+                        win[ts]--;
+                        left += _len;
+                    }
+                    if (cnt == words.size()) {
+                        ans.push_back(left);
+                    }
+                }
+                else { // 当出现不属于words中的词时候，进行状态清空操作
+                    left = right;
+                    cnt = 0;
+                    win.clear();
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
 
 ### 剑指57-II. 和为s的连续正数序列
 > 输入一个正整数 target ，输出所有和为 target 的连续正整数序列（**至少含有两个数**)。序列内的数字由小到大排列，不同序列按照首个数字从小到大排列
