--- a/leetcode/树结构/初级树结构.md
+++ b/leetcode/树结构/初级树结构.md
@@ -31,11 +31,11 @@
     - [自顶而下](#自顶而下)
     - [自底而上](#自底而上)
   - [104. 二叉树的最大深度](#104-二叉树的最大深度)
-  - [111. 二叉树的最小深度 *](#111-二叉树的最小深度-)
+  - [111. 二叉树的最小深度 *](#111-二叉树的最小深度)
   - [559. N叉树的最大深度](#559-n叉树的最大深度)
   - [429. N叉树的层序遍历](#429-n叉树的层序遍历)
   - [222. 完全二叉树的节点个数](#222-完全二叉树的节点个数)
-  - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树-)
+  - [98. 验证二叉搜索树 [*]](#98-验证二叉搜索树)
   - [100. 相同二叉树](#100-相同二叉树)
   - [101. 对称二叉树](#101-对称二叉树)
   - [662. 二叉树的最大宽度](#662-二叉树的最大宽度)
@@ -60,15 +60,15 @@
 - [树的查找](#树的查找)
   - [剑指26. 树的子结构 [Medium] [Tencent]](#剑指26-树的子结构-medium-tencent)
   - [offer54. 二叉搜索树的第k大节点](#offer54-二叉搜索树的第k大节点)
-  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素--medium)
-  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像--反转二叉树)
+  - [230. 二叉搜索树BST中第K小的元素  [Medium]](#230-二叉搜索树bst中第k小的元素-medium)
+  - [剑指27. 二叉树的镜像 / 反转二叉树](#剑指27-二叉树的镜像-反转二叉树)
   - [剑指33. 二叉搜索树的后序遍历序列判断 [Medium]](#剑指33-二叉搜索树的后序遍历序列判断-medium)
   - [剑指36. BST与双向链表](#剑指36-bst与双向链表)
   - [110. 平衡二叉树的判断](#110-平衡二叉树的判断)
   - [404. 左叶子之和](#404-左叶子之和)
   - [199. 二叉树的右视图](#199-二叉树的右视图)
   - [513. 找树左下角的值](#513-找树左下角的值)
-  - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点-)
+  - [450. 删除二叉搜索树中的节点 *](#450-删除二叉搜索树中的节点)
   - [701. 二叉搜索树中的插入操作](#701-二叉搜索树中的插入操作)
   - [99. 恢复二叉搜索树](#99-恢复二叉搜索树)
   - [617. 合并二叉树](#617-合并二叉树)
@@ -402,7 +402,7 @@ public:
 };
 ```
 - 基于自顶而下的递归思想
-```
+```c++
 class Solution {
 public:
     int ans = 0;
@@ -426,7 +426,7 @@ public:
 - 基于BFS思想，每遍历树一层，深度就加1，当BFS完成整个树即得到最终的结果；
      时间复杂度O(n) 空间复杂度O(n)
 
-```
+```c++
 class Solution {
 public:
     int maxDepth(TreeNode* root) {
@@ -2896,6 +2896,7 @@ public:
 - 关键点： **`Trie结构定义`**
 
 ```c++
+#include<memory.h> 
 struct TrieNode {
     bool isWord;
     TrieNode* next[26];
