--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -84,7 +84,7 @@ Y   I   R
 - 时间复杂度： O(N) 
 - 关键点： **`Z形遍历`**  这类思想可以应用在数组的特殊方向遍历中
 
-```
+```c++
 class Solution {
 public:
     string convert(string s, int numRows) {
@@ -111,7 +111,7 @@ public:
 
 ### 7. 整数反转
 > 给你一个 32 位的有符号整数 x ，返回将 x 中的数字部分反转后的结果。
-如果反转后整数超过 32 位的有符号整数的范围 [−231,231 − 1] ，就返回 0。
+如果反转后整数超过 32 位的有符号整数的范围 [−2^31,2^31 − 1] ，就返回 0。
 
 - 考虑反转后是否会溢出的问题：
   - **使用ans 和INT_MIN / INT_MAX的判断，提前判断*10前是否会溢出， 正数最大值个位为7 ， 负数为8**
@@ -120,7 +120,9 @@ public:
 - 时间复杂度O(log10(x)) 要处理log10(x)个数字
 - 关键点： **`字符串常规遍历`**  **`数值边界情况处理`**
 
-```class Solution {
+```c++
+#include <limits.h>
+class Solution {
 public:
     int reverse(int x) {
        int res=0;
@@ -143,7 +145,7 @@ public:
 - 从0开始循环遍历各串同一位置上是否相等
 - 时间复杂度 O(NM)
 - 关键点： **`循环遍历`**
-```
+```c++
 class Solution {
 public:
     string longestCommonPrefix(vector<string>& strs) {
@@ -182,7 +184,7 @@ public:
 - 时间复杂度为O(mnlogm) m为最小字符串长度。
 
 
-```
+```c++
 class Solution {
 public:
     string longestCommonPrefix(vector<string>& strs) {
@@ -444,18 +446,15 @@ string sub(string a, string b) {
     }
     reverse(res.begin(), res.end());
     // 删除前导0
-    
     int pos = 0;
     for (int i = 0; i < res.size() - 1; i++) {
         if (res[i] != '0') {
             pos = i;
             break;
         }
-        
     }
     return res.substr(pos);
 }
-
 ```
 
 ### 补充. 36进制加法 [字节]
