--- a/leetcode/字符串/初级字符串.md
+++ b/leetcode/字符串/初级字符串.md
@@ -48,6 +48,7 @@
   - [32. 最长有效括号](#32-最长有效括号)
   - [678. 有效的括号字符串](#678-有效的括号字符串)
   - [139. 单词拆分](#139-单词拆分)
+  - [763. 划分字母区间](#763-划分字母区间)
   - [71. 简化路径 *](#71-简化路径-)
   - [224. 基础计算器 [Hard] ***](#224-基础计算器-hard-)
   - [227. 基本计算器II [Medium]](#227-基本计算器ii-medium)
@@ -910,7 +911,7 @@ public:
 返回 6 ，输入数组的前 6 个字符应该是：["a","2","b","2","c","3"]
 ```
 - **双指针**方法，`rear + start`搜索重复字符段，并将重复长度进行原地存储； 
-  - rear指针用于原地存储， start用于向后搜索
+  - **rear指针用于原地存储， start用于向后搜索**
   - 更新过程中主要时要注意rear指针的调整
 - 关键点： **`指针移动细节`**
 ```c++
@@ -2439,6 +2440,100 @@ public:
     }
 };
 ```
+
+### 763. 划分字母区间
+> 字符串 S 由小写字母组成。我们要把这个字符串划分为尽可能多的片段，同一字母最多出现在一个片段中。返回一个表示每个字符串片段的长度的列表。
+```
+输入：S = "ababcbacadefegdehijhklij"
+输出：[9,7,8]
+解释：
+划分结果为 "ababcbaca", "defegde", "hijhklij"。
+每个字母最多出现在一个片段中。
+像 "ababcbacadefegde", "hijhklij" 的划分是错误的，因为划分的片段数较少。
+```
+- 本题问题可以简化为将字符串分为不同的区间， 不同区间内元素不重复。
+- 从元素角度出发， 确定每个字母出现的首个位置和最后一个位置
+  - 最后就变成了`<first, last>`组合问题， 寻找无交叉的间隔即可
+  - 通过每次遍历合并重复/重叠区间即可得到最后寻找的最优区间分割
+- 时间复杂度  O(N)
+
+
+```c++
+class Solution {
+public:
+    vector<int> partitionLabels(string s) {
+        unordered_map<char, vector<int>> firstPos;
+         
+        vector<vector<int>> intervals;
+        vector<int> ans;
+        for (int i = 0; i < s.size(); i++) {
+            if (firstPos.find(s[i]) != firstPos.end()) {
+                firstPos[s[i]][1] = i;
+            } 
+            else {
+                firstPos[s[i]].push_back(i);
+                firstPos[s[i]].push_back(i);
+            }
+        }
+        for (auto & p : firstPos) {
+            //cout << p.first << " ";
+            //cout << p.second[0] << " " << p.second[1] << endl;
+            intervals.push_back(p.second);
+        }
+        int n = firstPos.size();
+        //cout << n << endl;
+        sort(intervals.begin(), intervals.end());
+        int start = -1;
+        int end = -1;
+        for (int i = 0; i < n; i++) {
+            
+            int s = intervals[i][0];
+            int e = intervals[i][1];
+            if (s > end ) {
+                int ls = end - start + 1;
+                if (end >= 0) {
+                    ans.push_back(ls);
+                }
+                start = s;
+                end = e;
+            }
+            else {
+                end = max(e, end);
+            }
+            if (i == n - 1) {
+                ans.push_back(end - start + 1);
+            }
+        }
+        return ans;
+    }
+};
+```
+- 进一步简化， 只用记录每个字母最后一次出现的位置即可
+- 再做第二次遍历， 来完成区间划分， 本质思路与上面一样， 但省去了很多不必要的操作：
+```c++
+class Solution {
+public:
+    vector<int> partitionLabels(string s) {
+        vector<int> last(26);
+        vector<int> ans;
+        for (int i = 0; i < s.size(); i++) {
+            last[s[i] - 'a'] = i; 
+        }
+        int end = 0;
+        int start = 0;
+        for (int i = 0; i < s.size(); i++) {
+            end = max(end, last[s[i]-'a']);
+            if (i == end) {
+                ans.push_back(end - start + 1);
+                start = end + 1;
+            }
+        }
+
+        return ans;
+    }
+};
+```
+
 
 ### 71. 简化路径 *
 > 一个字符串 path ，表示指向某一文件或目录的 Unix 风格 绝对路径 （以 '/' 开头），请你将其转化为更加简洁的规范路径。
