--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -4,6 +4,8 @@
   - [84. 柱状图中的最大面积](#84-柱状图中的最大面积)
   - [85. 最大矩形](#85-最大矩形)
   - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
+  - [316. 去除重复字母](#316-去除重复字母)
+  - [1081. 不同字符的最小子序列](#1081-不同字符的最小子序列)
   - [456. 132模式](#456-132模式)
   - [补充. 求区间最小数乘区间和的最大值](#补充-求区间最小数乘区间和的最大值)
   - [补充. 看到的楼盘数量 [腾讯笔试]](#补充-看到的楼盘数量-腾讯笔试)
@@ -262,6 +264,88 @@ public:
             flag = true;
         }
         return ans.empty() ? "0" : ans;
+    }
+};
+```
+### 316. 去除重复字母
+> 给你一个字符串 s ，请你去除字符串中重复的字母，使得每个字母只出现一次。需保证 返回结果的字典序最小（要求不能打乱其他字符的相对位置）。
+
+- 关键点： 在去重的同时， 考虑字典序； 即`babc` 对于b保留第一个还是第二位置， 需要考虑字典序
+- 基于单调栈的思路： 
+  - 先记录每个字母的出现频次
+  - 然后对字符串从头开始遍历， 利用stack栈结构存储保留的字符
+    - 当前元素首次出现且当当前元素小于栈顶元素时， 即有更小的字典序时即考虑进行栈顶出栈操作。
+    - 为了保证元素均存在，还需要考虑栈顶元素当前的剩余的频次不能为0
+- 时间复杂度 O(N)  空间复杂度 O(1)
+
+```c++
+class Solution {
+public:
+    string removeDuplicateLetters(string s) {
+        vector<char> res;
+        unordered_map<char, int> freq;
+        for (auto & c : s) {
+            freq[c]++;
+        }
+
+        for (auto & c : s) {
+            // 此处可以使用visited数组来代替
+            if (find(res.begin(), res.end(), c) == res.end()) {
+                // 根据单调栈思路进行处理
+                // 当当前字符小于栈顶元素 即字典序可能会更小的时候 
+                // 且检查出栈后栈顶元素后续是否还会出现 freq>0 则进行出栈操作
+                while (!res.empty() && res.back() > c && freq[res.back()] > 0) {
+                    res.pop_back();
+                }
+                res.push_back(c);
+            }
+            freq[c]--;
+        }
+        return string(res.begin(), res.end());
+    }
+};
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+### 1081. 不同字符的最小子序列
+> 返回 s 字典序最小的子序列，该子序列包含 s 的所有不同字符，且只包含一次。
+
+- 与316题目本质一致， 子序列也要保持字符顺序， 所以跟[LC316]做法一致
+- 下面使用单调栈的做法完成
+
+```c++
+class Solution {
+public:
+    string smallestSubsequence(string s) {
+        unordered_map<char, int> freq;
+        int visited[26]={0};
+        vector<int> res;
+        for (auto& c : s) {
+            freq[c]++;
+        }
+        for (auto& c : s) {
+            if (!visited[c-'a']) {
+                while (!res.empty() && res.back() > c && freq[res.back()] > 0) {
+                    visited[res.back() - 'a'] = 0; // 注意把出栈元素的标记设为0
+                    res.pop_back();
+                }
+                visited[c-'a'] = 1;
+                res.push_back(c);
+            }
+            freq[c]--;
+        }
+        return string(res.begin(), res.end());
     }
 };
 ```
