--- a/leetcode/动态规划/动态规划-初级.md
+++ b/leetcode/动态规划/动态规划-初级.md
@@ -1723,10 +1723,10 @@ public:
 ```
 
 - **贪心+二分搜索**
-  - 要使上升子序列尽可能的长，则我们需要让序列上升得尽可能慢，因此我们希望每次在上升子序列最后加上的那个数尽可能的小。
+  - 要**使上升子序列尽可能的长，则我们需要让序列上升得尽可能慢**，因此我们希望每次在上升子序列最后加上的那个数尽可能的小。
     - tails[k]的值表示 **长度为 k + 1 的子序列尾部元素的值**
   - 基于上面的贪心思路，维护一个数组 d[i]，表示长度为 ii 的最长上升子序列的末尾元素的最小值，用len 记录目前最长上升子序列的长度，起始时 lenlen 为 11，d[1] = \textit{nums}[0]d[1]=nums[0]
-
+- 时间复杂度 O(NlogN)
 
 ```c++
 class Solution {
@@ -1743,13 +1743,14 @@ public:
                 int left = 0;
                 int right = tail.size() - 1;
                 //cout << 'l' << left << 'r' << right << " "<< nums[i] <<endl;
-                while(left < right) {
+                // 关键点 即通过二分查找 搜索目标值的下限， 然后进行替换操作； 即找到当前长度下的最小的值， 让序列上升更慢
+                while(left <= right) {
                     // int mid = left + (right - left)/2;
                     int mid = (left + right) / 2;
                     if (tail[mid] < nums[i]) {
                         left = mid + 1;
                     } else {
-                        right = mid;
+                        right = mid - 1;
                     }
                 }
                tail[left] = nums[i];
