--- a/leetcode/数组/数组-中级.md
+++ b/leetcode/数组/数组-中级.md
@@ -4,8 +4,9 @@
   - [84. 柱状图中的最大面积](#84-柱状图中的最大面积)
   - [85. 最大矩形](#85-最大矩形)
   - [402. 移除K个字符 [Medium]](#402-移除k个字符-medium)
-  - [316. 去除重复字母](#316-去除重复字母)
+  - [316. 去除重复字母 [JD.com]](#316-去除重复字母-jdcom)
   - [1081. 不同字符的最小子序列](#1081-不同字符的最小子序列)
+  - [321. 拼接最大数 [Hard]](#321-拼接最大数-hard)
   - [456. 132模式](#456-132模式)
   - [补充. 求区间最小数乘区间和的最大值](#补充-求区间最小数乘区间和的最大值)
   - [补充. 看到的楼盘数量 [腾讯笔试]](#补充-看到的楼盘数量-腾讯笔试)
@@ -267,7 +268,7 @@ public:
     }
 };
 ```
-### 316. 去除重复字母
+### 316. 去除重复字母 [JD.com]
 > 给你一个字符串 s ，请你去除字符串中重复的字母，使得每个字母只出现一次。需保证 返回结果的字典序最小（要求不能打乱其他字符的相对位置）。
 
 - 关键点： 在去重的同时， 考虑字典序； 即`babc` 对于b保留第一个还是第二位置， 需要考虑字典序
@@ -349,6 +350,86 @@ public:
     }
 };
 ```
+
+### 321. 拼接最大数 [Hard]
+> 给定长度分别为 m 和 n 的两个数组，其元素由 0-9 构成，表示两个自然数各位上的数字。现在从这两个数组中选出 k (k <= m + n) 个数字拼接成一个新的数，要求从同一个数组中取出的数字保持其在原数组中的相对顺序。
+> 求满足该条件的最大数。结果返回一个表示该最大数的长度为 k 的数组
+
+- 题目相对来说非常复杂，包含多个子问题
+- 基本的解题过程包括：
+  - 对于两个数组选取保序条件下的最大数 **通过单调栈即可完成**
+  - 从两个数组中分别选出一定长度的子序列， 即需要遍历不同的长度组合
+  - **将子序列进行合并， 合并时需要进行数值比较**， 得到最大组合结果
+
+
+
+```c++
+class Solution {
+public:
+    vector<int> helper(vector<int>& nums, int length) {
+        vector<int> res;
+        int drop = nums.size() - length; 
+        for (int i = 0; i < nums.size(); i++) {
+            while (!res.empty() && res.back() < nums[i] && drop > 0) {
+                drop--;
+                res.pop_back();
+            }
+            if (res.size() < length)
+            res.push_back(nums[i]);
+            else {
+                drop--;
+            }
+        }
+        return res;
+    }
+    // 合并需要对每个位置上的元素都进行对比， 若元素相等则需要看后续元素的情况进行对比
+    vector<int> merge(vector<int>& nums1, vector<int>& nums2) {
+        int p1 = 0;
+        int p2 = 0;
+        int n = nums2.size() + nums1.size();
+        vector<int> res(n);
+        int i = 0;
+        while (p1 < nums1.size() || p2 < nums2.size()) {
+            if (compare(nums1, nums2, p1, p2) > 0) {
+                res[i++] = nums1[p1++];
+            }
+            else {
+                res[i++] = nums2[p2++];
+            }
+        }
+        return res;
+    }
+    // 进行比较  得到两个子序列的大小
+    int compare(vector<int> nums1, vector<int> nums2, int p1, int p2) {
+        int n1 = nums1.size();
+        int n2 = nums2.size();
+        while (p1 < n1 && p2 < n2) {
+            int d = nums1[p1++] - nums2[p2++];
+            if (d != 0) return d; // < 0  > 0
+        }
+        return (n1 - p1) - (n2 - p2); // 对比剩余长度的情况
+    }
+
+    vector<int> maxNumber(vector<int>& nums1, vector<int>& nums2, int k) {
+        int n1 = nums1.size();
+        int n2 = nums2.size();
+        int start = max(0, k - n2);
+        int end = min(k, n1);
+        vector<int> res(k, 0);
+        for (int i = start; i <= end; i++) {
+           
+            vector<int> x = helper(nums1, i);
+            vector<int> y = helper(nums2, k - i);
+            vector<int> tmp = merge(x, y);
+            if (compare(tmp, res, 0, 0) > 0) {
+                res.swap(tmp);
+            }
+        }
+        return res;
+    }
+};
+```
+
 ### 456. 132模式
 > 132 模式的子序列 由三个整数 nums[i]、nums[j] 和 nums[k] 组成，并同时满足：i < j < k 和 nums[i] < nums[k] < nums[j] , 判断序列中是否存在132模式
 
